--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "random-gif",
   "version": "0.1.0",
+  "homepage": "https://Gauravchauhan48.github.io/Random_Gif_Generator",
   "private": true,
   "dependencies": {
     "axios": "^1.4.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -12,6 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
